--- a/src/styles/pin_styles.css
+++ b/src/styles/pin_styles.css
@@ -54,6 +54,10 @@
 }
 
 .pint_mock_icon_container {
+
+    z-index: 99;
+    position: absolute;
+
     width: 32px;
     height: 32px;
     border-radius: 50%;
