--- a/src/styles/final_board_styles.css
+++ b/src/styles/final_board_styles.css
@@ -52,3 +52,18 @@
 .card_large {
   grid-row-end: span 45;
 }
+
+
+.reponsible_wrapper {
+  width: 1100px;
+  margin: 0 auto;
+}
+
+@media screen and (max-width: 1150px) {
+
+  .reponsible_wrapper {
+    width: 100%;
+    padding: 10px 15px 0 15px;
+  }
+  
+}
