--- a/src/styles/final_board_styles.css
+++ b/src/styles/final_board_styles.css
@@ -8,11 +8,11 @@
 .navigation_bar .pint_mock_icon_container {
   width: 60px;
   height: 60px;
-  position: relative;
-  top: 10%;
-  left: 90%;
+  position: fixed;
+  top: 100px;
+  right: 20px;
   transition-duration: 0.3s;
-  
+
   margin: 10px;
   text-align: center;
   font-size: 20px;
@@ -53,17 +53,14 @@
   grid-row-end: span 45;
 }
 
-
 .reponsible_wrapper {
   width: 1100px;
   margin: 0 auto;
 }
 
 @media screen and (max-width: 1150px) {
-
   .reponsible_wrapper {
     width: 100%;
     padding: 10px 15px 0 15px;
   }
-  
 }
